refactor(uw-code-center):重构 Swagger 解析逻辑并优化相关功能
- 重构 Swagger 解析逻辑，适应 OpenAPI 3.1 及以上版本
-优化 API 信息获取和处理，支持数组和对象类型的解析
- 移除未使用的函数和变量，简化代码结构
- 更新 swagger-parser-v3 依赖至 2.1.29 版本